commit tree 489548ace2082883d68daa9ec5a4e32fa2feb3be

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   Relative Path (internal link)
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay">
+  <a href ="https://in.pinterest.com/pin/498070040018328010/"
+  <img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay"></a>
+  <a href="about.html">About Page</a>
+  <a href="https://www.w3schools.com/html/html_filepaths.asp" target=”_blank”>w3school site</a>
 
 </body>
 </html>
